changed fontawesome icons for designed images and fixed footer spacing.

--- a/Услуги.html
+++ b/Услуги.html
@@ -111,30 +111,62 @@
         <section class="two">
             <h2><b>Выберите что будем раскручивать?</b></h2>
             <div class="socials">
-                <div class="socialMedia"><i class="fab fa-vk fa-2x"></i>
-                    <p class="roundedBorders">8 услуг</p>
-                </div>
-                <div class="socialMedia"><i class="fab fa-youtube fa-2x"></i>
-                    <p class="roundedBorders">4 услуг</p>
-                </div>
-                <div class="socialMedia"><i class="fab fa-instagram fa-2x"></i>
-                    <p class="roundedBorders">14 услуг</p>
-                </div>
-                <div class="socialMedia"><i class="fab fa-telegram-plane fa-2x"></i>
-                    <p class="roundedBorders">6 услуг</p>
-                </div>
-                <div class="socialMedia"><i class="fab fa-facebook-square fa-2x"></i>
-                    <p class="roundedBorders">9 услуг</p>
-                </div>
-                <div class="socialMedia"><i class="fab fa-twitter-square fa-2x"></i>
-                    <p class="roundedBorders">9 услуг</p>
-                </div>
-                <div class="socialMedia"><i class="fab fa-twitch fa-2x"></i>
-                    <p class="roundedBorders">1 услуг</p>
-                </div>
-                <div class="socialMedia"><i class="fab fa-odnoklassniki fa-2x"></i>
-                    <p class="roundedBorders">8 услуг</p>
-                </div>
+                <a href="#">
+                    <div class="socialMedia">
+                        <!-- <i class="fab fa-vk fa-2x"></i> -->
+                        <img src="img/icons8-vk-circled-filled-100.png" alt="VK chat icon in circle">
+                        <p class="roundedBorders">8 услуг</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="socialMedia">
+                        <!-- <i class="fab fa-youtube fa-2x"></i> -->
+                        <img src="img/icons8-youtube-filled-100.png" alt="Youtbe filled icon">
+                        <p class="roundedBorders">4 услуг</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="socialMedia">
+                        <!-- <i class="fab fa-instagram fa-2x"></i> -->
+                        <img src="img/icons8-instagram-filled-100 (1).png" alt="instagram filled icon">
+                        <p class="roundedBorders">14 услуг</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="socialMedia">
+                        <!-- <i class="fab fa-telegram-plane fa-2x"></i> -->
+                        <img src="img/icons8-telegram-app-96.png" alt="Telegram filled icon in circle">
+                        <p class="roundedBorders">6 услуг</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="socialMedia">
+                        <!-- <i class="fab fa-facebook-square fa-2x"></i> -->
+                        <img src="img/icons8-facebook-circled-filled-100.png" alt=" Facebook filled chat icon in circle">
+                        <p class="roundedBorders">9 услуг</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="socialMedia">
+                        <!-- <i class="fab fa-twitter-square fa-2x"></i> -->
+                        <img src="img/icons8-twitter-circled-filled-100.png" alt="Twitter filled chat icon in circle">
+                        <p class="roundedBorders">9 услуг</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="socialMedia">
+                        <!-- <i class="fab fa-twitch fa-2x"></i> -->
+                        <img src="img/icons8-twitch-filled-100.png" alt="Twitch filled icon">
+                        <p class="roundedBorders">1 услуг</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="socialMedia">
+                        <!-- <i class="fab fa-odnoklassniki fa-2x"></i> -->
+                        <img src="img/icons8-odnoklassniki-circled-filled-100.png" alt="Classmates (odnoklassniki) filled  icon in circle">
+                        <p class="roundedBorders">8 услуг</p>
+                    </div>
+                </a>
             </div>
         </section>
         <hr>
@@ -207,7 +239,8 @@
 
             <div class="supportOptions">
                 <div class="supportOptionsItem">
-                    <i class="fas fa-comment fa-2x"></i>
+                    <!-- <i class="fas fa-comment fa-2x"></i> -->
+                    <img src="img/Group.png" alt="chat icon in circle">
                     <h5>Чат</h5>
                     <p>Удобный способ получить ответ, оставаясь на сайте</p>
 
@@ -216,23 +249,26 @@
                 <hr>
 
                 <div class="supportOptionsItem">
-                    <i class="fab fa-viber fa-2x"></i>
+                    <!-- <i class="fab fa-viber fa-2x"></i> -->
+                    <img src="img/Group 2.png" alt="chat icon in circle">
                     <h5>Viber</h5>
                     <p>Получите консультацию через одно из самых популярных приложений</p>
 
                 </div>
                 <hr>
                 <div class="supportOptionsItem">
-                    <i class="fab fa-telegram-plane fa-2x"></i>
+                    <!-- <i class="fab fa-telegram-plane fa-2x"></i> -->
+                    <img src="img/TG.png" alt="chat icon in circle">
                     <h5>Telegram</h5>
                     <p>Самый перспективный мессенджер для зароботка</p>
 
                 </div>
                 <hr>
                 <div class="supportOptionsItem">
-                    <i class="fas fa-file-alt fa-2x"></i>
+                    <!-- <i class="fas fa-file-alt fa-2x"></i> -->
+                    <img src="img/Group 3.png" alt="chat icon in circle">
                     <h5>FAQ</h5>
-                    <p>База самых распространенных вопросов по работе с сервисом</p>
+                    <p>База самых распространенны х вопросов по работе с сервисом</p>
 
                 </div>
             </div>
