--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <div class="logo"><a href="login"><img src="img/logo_blue.png" alt="smmbot online logo"></a></div>
+        <div class="logo"><a href="index"><img src="img/logo_blue.png" alt="smmbot online logo"></a></div>
         <div class="menu-btn">
             <div class="btn-line"></div>
             <div class="btn-line"></div>
