--- a/Услуги.html
+++ b/Услуги.html
@@ -232,7 +232,7 @@
                         день.
                         <br><br>
 
-                        Если вам нужна помощь, напишите нам письмо на <a href="support@smmbot.online">support@smmbot.online</a>
+                        Если вам нужна помощь, напишите нам письмо на <a href="mailto:support@smmbot.online">support@smmbot.online</a>
                     </p>
                 </div>
             </div>
