--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                         день.
                         <br><br>
 
-                        Если вам нужна помощь, напишите нам письмо на <a target="_blank" href="support@smmbot.online">support@smmbot.online</a>
+                        Если вам нужна помощь, напишите нам письмо на <a href="mailto:support@smmbot.online">support@smmbot.online</a>
                     </p>
                 </div>
             </div>
