--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </ul>
         </nav>
 
-        <div class="login"><a href="">login <span><i class="far fa-user-circle"></i></span></a></div>
+        <div class="login"><a href="login">login <span><i class="far fa-user-circle"></i></span></a></div>
 
 
     </header>
