added page descriptions

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="language" content="Russian" />
+    <meta name="description" content="Сделай раскрутку аккаунта SMMBot ONLINE.">
     <link rel="mask-icon" href="img/logo_blue.png" color="#72A5BA" />
     <link rel="icon" href="img/logo_blue.png" />
     <meta name="theme-color" content="#72A5BA" />
@@ -350,7 +351,7 @@
 
                 <div class="supportOptionsItem">
                     <!-- <i class="fab fa-viber fa-2x"></i> -->
-                    <img src="img/Group 2.png" alt="chat icon in circle">
+                    <img src="img/Group 2.png" alt="Viber icon in circle">
                     <h5>Viber</h5>
                     <p>Получите консультацию через одно из самых популярных приложений</p>
 
@@ -358,7 +359,7 @@
                 <hr>
                 <div class="supportOptionsItem">
                     <!-- <i class="fab fa-telegram-plane fa-2x"></i> -->
-                    <img src="img/TG.png" alt="chat icon in circle">
+                    <img src="img/TG.png" alt="Telegram icon in circle">
                     <h5>Telegram</h5>
                     <p>Самый перспективный мессенджер для зароботка</p>
 
@@ -366,7 +367,7 @@
                 <hr>
                 <div class="supportOptionsItem">
                     <!-- <i class="fas fa-file-alt fa-2x"></i> -->
-                    <img src="img/Group 3.png" alt="chat icon in circle">
+                    <img src="img/Group 3.png" alt="Binder icon in circle">
                     <h5>FAQ</h5>
                     <p>База самых распространенны х вопросов по работе с сервисом</p>
 
