--- a/pageNotFound.html
+++ b/pageNotFound.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="language" content="Russian" />
+    <meta name="description" content="Страница не найдена/ 404 Page Not Found SMMBot ONLINE.">
     <link rel="mask-icon" href="img/logo_blue.png" color="#72A5BA" />
     <link rel="icon" href="img/logo_blue.png" />
     <meta name="theme-color" content="#72A5BA" />
