--- a/Услуги.html
+++ b/Услуги.html
@@ -56,7 +56,7 @@
             <h1>Сделай <br>
                 раскрутку аккаунта <br>
                 <b>SMMBot ONLINE</b></h1><br>
-            <button class="btn"> <span>Подробнее</span></button>
+            <a href="#"> <button class="btn"> <span>Подробнее</span></button></a>
 
         </div>
     </div>
@@ -75,7 +75,7 @@
                     <p>Подключение к телеграм-биржам</p>
                     <p>Примерный срок окупаемости: 4 месяца</p>
                     <br><br><br>
-                    <button class="btn">Заказать</button>
+                    <a href="#"><button class="btn">Заказать</button></a>
                 </div>
 
                 <div class="card">
@@ -89,7 +89,7 @@
                     <p>Примерный срок окупаемости: 3 месяца</p>
                     <p>Продвижение вашего канала с
                         помощью наших партнеров (взаимопиар)</p>
-                    <button class="btn">Заказать</button>
+                    <a href="#"> <button class="btn">Заказать</button></a>
                 </div>
 
                 <div class="card">
@@ -102,7 +102,7 @@
                     <p>Возможность ведения канала
                         под ключ</p>
                     <br><br><br><br><br>
-                    <button class="btn">Заказать</button>
+                    <a href="#"><button class="btn">Заказать</button></a>
                 </div>
 
             </div>
@@ -183,7 +183,7 @@
                     <p class="priceExplanation">за подписчика</p>
                     <p>Подписчики на канал Телеграм.
                         Быстрое добавление подписчиков.</p>
-                    <button class="btn">Заказать</button>
+                    <a href="#"> <button class="btn">Заказать</button></a>
                 </div>
 
                 <div class="cardWithImages">
@@ -194,7 +194,7 @@
                     <p>Качественные подписчики,
                         живые и активные,
                         быстрое добавление и большая база.</p>
-                    <button class="btn">Заказать</button>
+                    <a href="#"><button class="btn">Заказать</button></a>
                 </div>
 
                 <div class="cardWithImages">
@@ -205,7 +205,7 @@
                     <p>Накрутка подписчиков в инстаграм,
                         Высокая скорость подписки,
                         вероятность списания.</p>
-                    <button class="btn">Заказать</button>
+                    <a href="#"><button class="btn">Заказать</button></a>
                 </div>
 
                 <div class="cardWithImages">
@@ -215,7 +215,7 @@
                     <p class="priceExplanation">за подписчика</p>
                     <p>Быстрое и дешевое добавление лайков
                         на указанные фото в Instagram</p>
-                    <button class="btn">Заказать</button>
+                    <a href="#"> <button class="btn">Заказать</button></a>
                 </div>
             </div>
         </section>
