--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <title>SMMBot Online</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <div class="logo"><a href="index"><img src="img/logo_blue.png" alt="smmbot online logo"></a></div>
         <div class="menu-btn">
             <div class="btn-line"></div>
@@ -47,6 +49,47 @@
         </nav>
 
         <div class="login"><a href="login">login <span><i class="far fa-user-circle"></i></span></a></div>
+
+
+    </header> -->
+
+    <header class="navbar navbar-light bg-light ">
+
+        <a class="navbar-brand logo" href="index">
+            <img src="img/logo_blue.png" alt="smmbot online logo">
+        </a>
+        <nav class="navbar-expand-lg headerCentered">
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+
+            <div class="collapse text-center navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index">Главная</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Услуги">Услуги</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Бизнес</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Скидки </a>
+                    </li class="nav-item">
+                    <li>
+                        <a class="nav-link" href="#">Партнерка</a>
+                    </li class="nav-item">
+                    <li>
+                        <a class="nav-link" href="#">Поддержка</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <a class="login" href="login">login <span><i class="far fa-user-circle"></i></span></a>
 
 
     </header>
@@ -377,7 +420,13 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 
 </body>
 
