added hover to make for more interactivity

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="menu">
                 <ul>
                     <li>
-                        <a href="index">Главная</a>
+                        <a class="active" href="index">Главная</a>
                     </li>
                     <li>
                         <a href="Услуги">Услуги</a>
