added hover state to services page buttons

--- a/Услуги.html
+++ b/Услуги.html
@@ -39,7 +39,7 @@
                         <a href="index">Главная</a>
                     </li>
                     <li>
-                        <a href="Услуги">Услуги</a>
+                        <a class="active" href="Услуги">Услуги</a>
                     </li>
                     <li>
                         <a href="#">Бизнес</a>
