added link to font stylesheet

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <link rel="icon" href="img/logo_blue.png" />
     <meta name="theme-color" content="#72A5BA" />
     <title>SMMBot Online</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/inter.css" type="text/css" charset="utf-8" />
 
 </head>
 
@@ -69,7 +70,8 @@
                 раскрутку <br> аккаунта <br>
                 <b>SMMBot ONLINE</b></h1>
             <a id="svgButton" href="#">
-                <svg class="icon" viewBox="0 0 250 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <svg class="icon" viewBox="0 0 250 100" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink">
                     <defs>
                         <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-1">
                             <stop stop-color="#BC8CCD" offset="0%"></stop>
@@ -77,7 +79,8 @@
                         </linearGradient>
                     </defs>
                     <path fill="none" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
-                    <path class="icon--plain" fill="url(#linearGradient-1)" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                    <path class="icon--plain" fill="url(#linearGradient-1)"
+                        d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
                 </svg>
                 Заказать</a>
 
@@ -110,7 +113,8 @@
                                 </linearGradient>
                             </defs>
                             <path fill="none" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
-                            <path class="icon--plain" fill="url(#linearGradient-1)" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                            <path class="icon--plain" fill="url(#linearGradient-1)"
+                                d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
                         </svg>
                         Подробнее</a>
                 </div>
@@ -138,7 +142,8 @@
                                 </linearGradient>
                             </defs>
                             <path fill="none" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
-                            <path class="icon--plain" fill="url(#linearGradient-1)" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                            <path class="icon--plain" fill="url(#linearGradient-1)"
+                                d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
                         </svg>
                         Подробнее</a>
                 </div>
@@ -164,7 +169,8 @@
                                 </linearGradient>
                             </defs>
                             <path fill="none" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
-                            <path class="icon--plain" fill="url(#linearGradient-1)" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                            <path class="icon--plain" fill="url(#linearGradient-1)"
+                                d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
                         </svg>
                         Подробнее</a>
                 </div>
@@ -207,7 +213,8 @@
                 <a href="#">
                     <div class="socialMedia">
 
-                        <img src="img/icons8-facebook-circled-filled-100.png" alt=" Facebook filled chat icon in circle">
+                        <img src="img/icons8-facebook-circled-filled-100.png"
+                            alt=" Facebook filled chat icon in circle">
                         <p class="roundedBorders">9 услуг</p>
                     </div>
                 </a>
@@ -228,7 +235,8 @@
                 <a href="#">
                     <div class="socialMedia">
 
-                        <img src="img/icons8-odnoklassniki-circled-filled-100.png" alt="Classmates (odnoklassniki) filled  icon in circle">
+                        <img src="img/icons8-odnoklassniki-circled-filled-100.png"
+                            alt="Classmates (odnoklassniki) filled  icon in circle">
                         <p class="roundedBorders">8 услуг</p>
                     </div>
                 </a>
@@ -241,7 +249,8 @@
             <div class="cards">
                 <div class="cardWithImages">
                     <div style="width:299px;"></div>
-                    <img style="margin: 2px 0 0 0;" src="img/subscribers.png" alt="Image showing no of subscribers in channel">
+                    <img style="margin: 2px 0 0 0;" src="img/subscribers.png"
+                        alt="Image showing no of subscribers in channel">
                     <h3>Подписчики на канал</h3>
                     <p class="price">1.20 ₽</p>
                     <p class="priceExplanation">за подписчика</p>
@@ -257,7 +266,8 @@
                                 </linearGradient>
                             </defs>
                             <path fill="none" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
-                            <path class="icon--plain" fill="url(#linearGradient-1)" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                            <path class="icon--plain" fill="url(#linearGradient-1)"
+                                d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
                         </svg>
                         Заказать</a>
                 </div>
@@ -280,7 +290,8 @@
                                 </linearGradient>
                             </defs>
                             <path fill="none" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
-                            <path class="icon--plain" fill="url(#linearGradient-1)" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                            <path class="icon--plain" fill="url(#linearGradient-1)"
+                                d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
                         </svg>
                         Заказать</a>
                 </div>
@@ -303,7 +314,8 @@
                                 </linearGradient>
                             </defs>
                             <path fill="none" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
-                            <path class="icon--plain" fill="url(#linearGradient-1)" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                            <path class="icon--plain" fill="url(#linearGradient-1)"
+                                d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
                         </svg>
                         Заказать</a>
                 </div>
@@ -325,7 +337,8 @@
                                 </linearGradient>
                             </defs>
                             <path fill="none" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
-                            <path class="icon--plain" fill="url(#linearGradient-1)" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                            <path class="icon--plain" fill="url(#linearGradient-1)"
+                                d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
                         </svg>
                         Заказать</a>
                 </div>
@@ -345,7 +358,8 @@
                         день.
                         <br><br>
 
-                        Если вам нужна помощь, напишите нам письмо на <a href="mailto:support@smmbot.online">support@smmbot.online</a>
+                        Если вам нужна помощь, напишите нам письмо на <a
+                            href="mailto:support@smmbot.online">support@smmbot.online</a>
                     </p>
                 </div>
             </div>
@@ -387,12 +401,15 @@
         </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+    </script>
 
     <script type="text/javascript">
         $(document).ready(function () {
