--- a/Услуги.html
+++ b/Услуги.html
@@ -10,10 +10,11 @@
     <link rel="icon" href="img/logo_blue.png" />
     <meta name="theme-color" content="#72A5BA" />
     <title>Услуги | SMMBot Online</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/inter.css" type="text/css" charset="utf-8" />
 
 </head>
 
@@ -154,7 +155,8 @@
                 <a href="#">
                     <div class="socialMedia">
                         <!-- <i class="fab fa-facebook-square fa-2x"></i> -->
-                        <img src="img/icons8-facebook-circled-filled-100.png" alt=" Facebook filled chat icon in circle">
+                        <img src="img/icons8-facebook-circled-filled-100.png"
+                            alt=" Facebook filled chat icon in circle">
                         <p class="roundedBorders">9 услуг</p>
                     </div>
                 </a>
@@ -175,7 +177,8 @@
                 <a href="#">
                     <div class="socialMedia">
                         <!-- <i class="fab fa-odnoklassniki fa-2x"></i> -->
-                        <img src="img/icons8-odnoklassniki-circled-filled-100.png" alt="Classmates (odnoklassniki) filled  icon in circle">
+                        <img src="img/icons8-odnoklassniki-circled-filled-100.png"
+                            alt="Classmates (odnoklassniki) filled  icon in circle">
                         <p class="roundedBorders">8 услуг</p>
                     </div>
                 </a>
@@ -188,7 +191,8 @@
             <div class="cards">
                 <div class="cardWithImages">
                     <div style="width:299px;"></div>
-                    <img style="margin: 2px 0 0 0;" src="img/subscribers.png" alt="Image showing no of subscribers in channel">
+                    <img style="margin: 2px 0 0 0;" src="img/subscribers.png"
+                        alt="Image showing no of subscribers in channel">
                     <h3>Подписчики на канал</h3>
                     <p class="price">1.20 ₽</p>
                     <p class="priceExplanation">за подписчика</p>
@@ -244,7 +248,8 @@
                         день.
                         <br><br>
 
-                        Если вам нужна помощь, напишите нам письмо на <a href="mailto:support@smmbot.online">support@smmbot.online</a>
+                        Если вам нужна помощь, напишите нам письмо на <a
+                            href="mailto:support@smmbot.online">support@smmbot.online</a>
                     </p>
                 </div>
             </div>
@@ -289,12 +294,15 @@
     </footer>
 
     <!-- <script src="js/main.js"></script> -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+    </script>
 
     <script type="text/javascript">
         $(document).ready(function () {
