--- a/index.html
+++ b/index.html
@@ -270,10 +270,11 @@
                     <div class="owl-carousel owl-theme">
                         <div class="item">
                             <div class="cardWithImages">
-                                <div style="width:299px;"></div>
-                                <img style="margin: 6px 0 0 0;" src="img/subscribers.png"
+
+                                <img style="object-fit: contain;" src="img/subscribers.png"
                                     alt="Image showing no of subscribers in channel">
-                                <div class="text" style="height:110px; margin: 10px 0;">
+                                <hr>
+                                <div class="contained-text">
                                     <h3>Подписчики на канал</h3>
                                     <p class=" price">1.20 ₽</p>
                                     <p class="priceExplanation">за подписчика</p>
@@ -301,7 +302,8 @@
                             <div class="cardWithImages">
                                 <img src="img/instaNotification.png"
                                     alt="Image showing notification for instagram following">
-                                <div class="text" style="height:150px; margin: 10px 0;">
+                                <hr>
+                                <div class="contained-text">
                                     <h3>Подписчики (живые-офферы)</h3>
                                     <p class="price">0.25 ₽</p>
                                     <p class="priceExplanation">за подписчика</p>
@@ -330,7 +332,8 @@
                             <div class="cardWithImages">
                                 <img src="img/instaFollowers.png"
                                     alt="Image showing instagram followers, post and following.">
-                                <div class="text" style="height:150px; margin: 10px 0;">
+                                <hr>
+                                <div class="contained-text">
                                     <h3>Подписчики (боты)</h3>
                                     <p class="price">0.20 ₽</p>
                                     <p class="priceExplanation">за подписчика</p>
@@ -358,7 +361,8 @@
                         <div class="item">
                             <div class="cardWithImages">
                                 <img src="img/instaComments.png" alt="Image showing instagram comments.">
-                                <div class="text" style="height:150px; margin: 10px 0;">
+                                <hr>
+                                <div class="contained-text">
                                     <h3>Лайки</h3>
                                     <p class="price">0.04 ₽</p>
                                     <p class="priceExplanation">за подписчика</p>
@@ -385,8 +389,9 @@
                         <div class="item">
                             <div class="cardWithImages">
                                 <img src="img/likes.jpg" alt="Комментарии" title="Комментарии" width="299px"
-                                    height="150px">
-                                <div class="text" style="height:120px; margin: 10px 0;">
+                                    height="120px">
+                                <hr>
+                                <div class="contained-text">
                                     <h3>Комментарии</h3>
                                     <p class="price">1.00 ₽</p>
                                     <p class="priceExplanation">за комментарий</p>
@@ -414,8 +419,9 @@
                         <div class="item">
                             <div class="cardWithImages">
                                 <img src="img/insta1.jpg" alt="Просмотры видео (офферы)"
-                                    title="Просмотры видео (офферы)" width="299px" height="150px">
-                                <div class="text" style="height:120px; margin: 10px 0;">
+                                    title="Просмотры видео (офферы)">
+                                <hr>
+                                <div class="contained-text">
                                     <h3>Просмотры видео (офферы)</h3>
                                     <p class="price">0.09 ₽</p>
                                     <p class="priceExplanation">за просмотр</p>
@@ -443,8 +449,9 @@
                         <div class="item">
                             <div class="cardWithImages">
                                 <img src="img/insta_1794.jpg" alt="Просмотры видео (боты)"
-                                    title="Просмотры видео (боты)" width="299px" height="150px">
-                                <div class="text" style="height:120px; margin: 10px 0;">
+                                    title="Просмотры видео (боты)">
+                                <hr>
+                                <div class="contained-text">
                                     <h3>Просмотры видео (боты)</h3>
                                     <p class="price">0.05 ₽</p>
                                     <p class="priceExplanation">за просмотр</p>
@@ -471,8 +478,9 @@
                         <div class="item">
                             <div class="cardWithImages">
                                 <img src="img/view1.jpg" alt="Просмотры видео с охватом"
-                                    title="Просмотры видео с охватом" width="299px" height="150px">
-                                <div class="text" style="height:120px; margin: 10px 0;">
+                                    title="Просмотры видео с охватом">
+                                <hr>
+                                <div class="contained-text">
                                     <h3>Просмотры видео с охватом</h3>
                                     <p class="price">0.03 ₽</p>
                                     <p class="priceExplanation">за просмотр</p>
@@ -567,7 +575,7 @@
 
     <script src="dist/owl.carousel.min.js"></script>
 
-    <script type="text/javascript">
+    <script>
         $(document).ready(function () {
             $(".menu-icon").on("click", function () {
                 $("nav ul").toggleClass("showing");
@@ -576,7 +584,7 @@
 
 
         // Preloader
-        var preloader;
+        let preloader;
 
         function loadNow(opacity) {
             if (opacity <= 0) {
@@ -584,18 +592,18 @@
             } else {
                 preloader.style.opacity = opacity;
                 window.setTimeout(function () {
-                    loadNow(opacity - 0.05)
-                }, 100);
+                    loadNow(opacity - 0.01)
+                }, 50);
             }
         }
 
         function displayContent() {
             preloader.style.display = 'none';
-            document.getElementById('content').style.display = 'block';
+            document.querySelector('#content').style.display = 'block';
         }
 
         document.addEventListener("DOMContentLoaded", function () {
-            preloader = document.getElementById('preloader');
+            preloader = document.querySelector('#preloader');
             loadNow(1);
         });
 
