--- a/Услуги.html
+++ b/Услуги.html
@@ -13,8 +13,24 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="dist/assets/owl.carousel.min.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="dist/assets/owl.theme.default.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="css/inter.css" type="text/css" charset="utf-8" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62479125-10"></script>
+    <script type="text/javascript">
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-62479125-10');
+    </script>
+    <!-- /Global site tag (gtag.js) - Google Analytics -->
 
 </head>
 
@@ -82,40 +98,44 @@
                     <div class="card">
                         <h3>Пакет бизнес</h3>
                         <hr>
-                        <p>Увеличение числа подписчиков</p>
-                        <p>Наполнение записями +1000
-                            под тематику канала</p>
-                        <p>Увеличение числа просмотров</p>
-                        <p>Подключение к телеграм-биржам</p>
-                        <p>Примерный срок окупаемости: 4 месяца</p>
-                        <br><br><br>
+                        <div class="cardParag">
+                            <p>Увеличение числа подписчиков</p>
+                            <p>Наполнение записями +1000
+                                под тематику канала</p>
+                            <p>Увеличение числа просмотров</p>
+                            <p>Подключение к телеграм-биржам</p>
+                            <p>Примерный срок окупаемости: 4 месяца</p>
+                        </div>
                         <a href="#"><button class="btn">Заказать</button></a>
                     </div>
 
                     <div class="card">
                         <h3>Пакет бизнес +</h3>
                         <hr>
-                        <p>Увеличение числа подписчиков</p>
-                        <p>Наполнение записями +1000
-                            под тематику канала</p>
-                        <p>Увеличение числа просмотров</p>
-                        <p>Подключение к телеграм-биржам</p>
-                        <p>Примерный срок окупаемости: 3 месяца</p>
-                        <p>Продвижение вашего канала с
-                            помощью наших партнеров (взаимопиар)</p>
+                        <div class="cardParag">
+                            <p>Увеличение числа подписчиков</p>
+                            <p>Наполнение записями +1000
+                                под тематику канала</p>
+                            <p>Увеличение числа просмотров</p>
+                            <p>Подключение к телеграм-биржам</p>
+                            <p>Примерный срок окупаемости: 3 месяца</p>
+                            <p>Продвижение вашего канала с
+                                помощью наших партнеров (взаимопиар)</p>
+                        </div>
                         <a href="#"> <button class="btn">Заказать</button></a>
                     </div>
 
                     <div class="card">
                         <h3>Пакет индивидуал</h3>
                         <hr>
-                        <p>Индивидуальный подход</p>
-                        <p>Персональный менеджер</p>
-                        <p>Розробка по вашему
-                            техническому заданию</p>
-                        <p>Возможность ведения канала
-                            под ключ</p>
-                        <br><br><br><br><br>
+                        <div class="cardParag">
+                            <p>Индивидуальный подход</p>
+                            <p>Персональный менеджер</p>
+                            <p>Розробка по вашему
+                                техническому заданию</p>
+                            <p>Возможность ведения канала
+                                под ключ</p>
+                        </div>
                         <a href="#"><button class="btn">Заказать</button></a>
                     </div>
 
@@ -192,48 +212,138 @@
             <section class="three">
                 <h2><b>Горячие предложения</b></h2>
                 <div class="cards">
-                    <div class="cardWithImages">
-                        <div style="width:299px;"></div>
-                        <img style="margin: 2px 0 0 0;" src="img/subscribers.png"
-                            alt="Image showing no of subscribers in channel">
-                        <h3>Подписчики на канал</h3>
-                        <p class="price">1.20 ₽</p>
-                        <p class="priceExplanation">за подписчика</p>
-                        <p>Подписчики на канал Телеграм.
-                            Быстрое добавление подписчиков.</p>
-                        <a href="#"> <button class="btn">Заказать</button></a>
-                    </div>
+                    <div class="owl-carousel owl-theme">
+                        <div class="item">
+                            <div class="cardWithImages">
 
-                    <div class="cardWithImages">
-                        <img src="img/instaNotification.png" alt="Image showing notification for instagram following">
-                        <h3>Подписчики (живые-офферы)</h3>
-                        <p class="price">0.25 ₽</p>
-                        <p class="priceExplanation">за подписчика</p>
-                        <p>Качественные подписчики,
-                            живые и активные,
-                            быстрое добавление и большая база.</p>
-                        <a href="#"><button class="btn">Заказать</button></a>
-                    </div>
+                                <img style="object-fit: contain;" src="img/subscribers.png"
+                                    alt="Image showing no of subscribers in channel">
+                                <hr>
+                                <div class="contained-text">
+                                    <h3>Подписчики на канал</h3>
+                                    <p class="price">1.20 ₽</p>
+                                    <p class="priceExplanation">за подписчика</p>
+                                    <p>Подписчики на канал Телеграм.
+                                        Быстрое добавление подписчиков.</p>
+                                </div>
+                                <a href="#"> <button class="btn">Заказать</button></a>
+                            </div>
+                        </div>
 
-                    <div class="cardWithImages">
-                        <img src="img/instaFollowers.png" alt="Image showing instagram followers, post and following.">
-                        <h3>Подписчики (боты)</h3>
-                        <p class="price">0.20 ₽</p>
-                        <p class="priceExplanation">за подписчика</p>
-                        <p>Накрутка подписчиков в инстаграм,
-                            Высокая скорость подписки,
-                            вероятность списания.</p>
-                        <a href="#"><button class="btn">Заказать</button></a>
-                    </div>
+                        <div class="item">
+                            <div class="cardWithImages">
+                                <img src="img/instaNotification.png"
+                                    alt="Image showing notification for instagram following">
+                                <hr>
+                                <div class="contained-text">
+                                    <h3>Подписчики (живые-офферы)</h3>
+                                    <p class="price">0.25 ₽</p>
+                                    <p class="priceExplanation">за подписчика</p>
+                                    <p>Качественные подписчики,
+                                        живые и активные,
+                                        быстрое добавление и большая база.</p>
+                                </div>
+                                <a href="#"> <button class="btn">Заказать</button></a>
+                            </div>
+                        </div>
 
-                    <div class="cardWithImages">
-                        <img src="img/instaComments.png" alt="Image showing instagram comments.">
-                        <h3>Лайки</h3>
-                        <p class="price">0.04 ₽</p>
-                        <p class="priceExplanation">за подписчика</p>
-                        <p>Быстрое и дешевое добавление лайков
-                            на указанные фото в Instagram</p>
-                        <a href="#"> <button class="btn">Заказать</button></a>
+                        <div class="item">
+                            <div class="cardWithImages">
+                                <img src="img/instaFollowers.png"
+                                    alt="Image showing instagram followers, post and following.">
+                                <hr>
+                                <div class="contained-text">
+                                    <h3>Подписчики (боты)</h3>
+                                    <p class="price">0.20 ₽</p>
+                                    <p class="priceExplanation">за подписчика</p>
+                                    <p>Накрутка подписчиков в инстаграм,
+                                        Высокая скорость подписки,
+                                        вероятность списания.</p>
+                                </div>
+                                <a href="#"> <button class="btn">Заказать</button></a>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <div class="cardWithImages">
+                                <img src="img/instaComments.png" alt="Image showing instagram comments.">
+                                <hr>
+                                <div class="contained-text">
+                                    <h3>Лайки</h3>
+                                    <p class="price">0.04 ₽</p>
+                                    <p class="priceExplanation">за подписчика</p>
+                                    <p>Быстрое и дешевое добавление лайков
+                                        на указанные фото в Instagram</p>
+                                </div>
+                                <a href="#"> <button class="btn">Заказать</button></a>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <div class="cardWithImages">
+                                <img src="img/likes.jpg" alt="Комментарии" title="Комментарии" width="299px"
+                                    height="120px">
+                                <hr>
+                                <div class="contained-text">
+                                    <h3>Комментарии</h3>
+                                    <p class="price">1.00 ₽</p>
+                                    <p class="priceExplanation">за комментарий</p>
+                                    <p>Комментарии от ботов и фейков, комментарии смайликами -
+                                        высокая скорость
+                                        выполнения.</p>
+                                </div>
+                                <a href="#"> <button class="btn">Заказать</button></a>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <div class="cardWithImages">
+                                <img src="img/insta1.jpg" alt="Просмотры видео (офферы)"
+                                    title="Просмотры видео (офферы)">
+                                <hr>
+                                <div class="contained-text">
+                                    <h3>Просмотры видео (офферы)</h3>
+                                    <p class="price">0.09 ₽</p>
+                                    <p class="priceExplanation">за просмотр</p>
+                                    <p>Просмотры видео роликов активными пользователями. Высокая
+                                        скорость по добавлению
+                                        просмотров</p>
+                                </div>
+                                <a href="#"> <button class="btn">Заказать</button></a>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <div class="cardWithImages">
+                                <img src="img/insta_1794.jpg" alt="Просмотры видео (боты)"
+                                    title="Просмотры видео (боты)">
+                                <hr>
+                                <div class="contained-text">
+                                    <h3>Просмотры видео (боты)</h3>
+                                    <p class="price">0.05 ₽</p>
+                                    <p class="priceExplanation">за просмотр</p>
+                                    <p>Очень быстрые просмотры, база просмотров в несколько
+                                        миллионов</p>
+                                </div>
+                                <a href="#"> <button class="btn">Заказать</button></a>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <div class="cardWithImages">
+                                <img src="img/view1.jpg" alt="Просмотры видео с охватом"
+                                    title="Просмотры видео с охватом">
+                                <hr>
+                                <div class="contained-text">
+                                    <h3>Просмотры видео с охватом</h3>
+                                    <p class="price">0.03 ₽</p>
+                                    <p class="priceExplanation">за просмотр</p>
+                                    <p>Просмотры видео с охватом. Средняя скорость добавления
+                                        просмотров.</p>
+                                </div>
+                                <a href="#"> <button class="btn">Заказать</button></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -295,9 +405,7 @@
         </footer>
     </div>
 
-    <!-- <script src="js/main.js"></script> -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
@@ -306,15 +414,18 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
     </script>
 
-    <script type="text/javascript">
+    <script src="dist/owl.carousel.min.js"></script>
+
+    <script>
         $(document).ready(function () {
             $(".menu-icon").on("click", function () {
                 $("nav ul").toggleClass("showing");
             });
         });
 
+
         // Preloader
-        var preloader;
+        let preloader;
 
         function loadNow(opacity) {
             if (opacity <= 0) {
@@ -322,21 +433,80 @@
             } else {
                 preloader.style.opacity = opacity;
                 window.setTimeout(function () {
-                    loadNow(opacity - 0.01)
+                    loadNow(opacity - 0.02)
                 }, 50);
             }
         }
 
         function displayContent() {
             preloader.style.display = 'none';
-            document.getElementById('content').style.display = 'block';
+            document.querySelector('#content').style.display = 'block';
         }
 
         document.addEventListener("DOMContentLoaded", function () {
-            preloader = document.getElementById('preloader');
+            preloader = document.querySelector('#preloader');
             loadNow(1);
         });
+
+        // owlCarousel
+        var owl = $('.owl-carousel');
+        owl.owlCarousel({
+            loop: true,
+            nav: false,
+            responsiveClass: true,
+            responsive: {
+                0: {
+                    items: 1,
+                    margin: 30
+                },
+
+                730: {
+                    items: 2
+                },
+
+                1100: {
+                    items: 3
+                },
+
+                1330: {
+                    items: 4
+                }
+
+            },
+            margin: 10,
+            autoplay: true,
+            autoplayHoverPause: true
+        });
     </script>
+
+    <!-- BEGIN JIVOSITE CODE {literal} -->
+    <script type='text/javascript'>
+        (function () {
+            var widget_id = 'BUVjD8v2M4';
+            var d = document;
+            var w = window;
+
+            function l() {
+                var s = document.createElement('script');
+                s.type = 'text/javascript';
+                s.async = true;
+                s.src = '//code.jivosite.com/script/widget/' + widget_id;
+                var ss = document.getElementsByTagName('script')[0];
+                ss.parentNode.insertBefore(s, ss);
+            }
+            if (d.readyState == 'complete') {
+                l();
+            } else {
+                if (w.attachEvent) {
+                    w.attachEvent('onload', l);
+                } else {
+                    w.addEventListener('load', l, false);
+                }
+            }
+        })();
+    </script>
+    <!-- {/literal} END JIVOSITE CODE -->
+
 </body>
 
 </html>
